--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "-- AWESOMENESS --",
   "main": "bot.js",
   "scripts": {
-    "start": "node bott.js"
+    "start": "node bot.js"
   },
   "dependencies": {
     "canvas": "^1.6.10",
