--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "ytdl-core": "^0.20.2",
      "ffmpeg": "0.0.4",
      "fs": "^0.0.2",
+     "anti-spam": "^0.0.2",
     "pretty-ms": "3.1.0", 
         "ffmpeg-binaries": "3.1.0", 
     "ffmpeg-binaries": "^3.2.2-3",
