--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "discord.js-heroku",
   "version": "1.0.0",
   "description": "An in-depth guide on deploying your Discord.js bot on Heroku",
-  "main": "index.js",
+  "main": "bot.js",
   "engines": {
     "node": "*",
     "npm": "*"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node bot.js"
   },
   "repository": {
     "type": "git",
