--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "dateformat": "^3.0.3",
     "express": "^4.16.3",
     "ffmpeg": "0.0.4",
-    "ffmpeg-binaries": "^3.2.2-3",
+    "ffmpeg-node": "0.0.2",
+    "ffmpeg-binaries": "3.2.2-3",
     "fs": "0.0.2",
     "get-youtube-id": "^1.0.0",
     "jimp": "^0.2.28",
